--- a/style/style.css
+++ b/style/style.css
@@ -24,11 +24,21 @@ img {
   border-radius: 100%;
 }
 .nav {
+  width: 50%;
   display: flex;
+  flex-direction: row-reverse;
+  flex-flow: row-reverse;
+
+  justify-content: center;
+  align-items: center;
 }
 a {
   padding: 20px;
   text-decoration: none;
+}
+ul {
+  display: flex;
+  flex-direction: row;
 }
 ul a {
   display: inline;
